name:           integer-openssl
version:        0.1.0
cabal-version:  >= 2.0
author:         Sebastian Nagel
maintainer:     sebastian.nagel@ncoding.at
copyright:      2017 Sebastian Nagel
license:        BSD3
license-file:   LICENSE
category:       Numeric, Algebra
build-type:     Simple
synopsis:       Integer library using openssl's bignum
description:
  Implementation of the 'Integer' type using the <https://www.openssl.org/ OpenSSL BIGNUM>
  arbitrary size integer library.

extra-source-files:
  README.md

source-repository head
  type: git
  location: https://github.com/ch1bo/integer-openssl

library
  default-language: Haskell2010
  hs-source-dirs: src/
  build-depends: ghc-prim ^>= 0.5.1.0
  default-extensions: NoImplicitPrelude
                    , MagicHash
                    , UnboxedTuples
                    , CPP
                    , ForeignFunctionInterface
                    , UnliftedFFITypes

  exposed-modules: GHC.Integer
  -- ghc-options: -this-unit-id integer-openssl -- TODO(SN): this-unit-id drops version info and is probably required when integrating with ghc

  extra-libraries: crypto
  includes: openssl/bn.h

library integer-openssl-internal
  default-language: Haskell2010
  build-depends: integer-openssl
  -- Re-export to distinguish in tests
  reexported-modules: GHC.Integer as OpenSSL.GHC.Integer

test-suite integer-openssl-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  default-language: Haskell2010
  default-extensions: MagicHash
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base >=4.7 && <5
               , ghc-prim
               , hspec
               , integer-openssl-internal
               , integer-gmp
               , QuickCheck
