name:           integer-openssl
version:        0.1.0
cabal-version:  >= 2.0
author:         Sebastian Nagel
maintainer:     sebastian.nagel@ncoding.at
copyright:      2018 Sebastian Nagel
license:        BSD3
license-file:   LICENSE
category:       Numeric, Algebra
build-type:     Simple
synopsis:       Integer library using openssl's bignum
description:
  Implementation of the 'Integer' type using the <https://www.openssl.org/ OpenSSL BIGNUM>
  arbitrary size integer library.

extra-source-files:
  README.md

source-repository head
  type: git
  location: https://github.com/ch1bo/integer-openssl

flag redefine-unit-id
  description: Rewrite package name for usage in ghc
  default:     True

flag integer-simple
  description: Test and benchmark against integer-simple package instead of integer-gmp
  default:     False

library
  default-language: Haskell2010
  hs-source-dirs: src/
  exposed-modules: GHC.Integer
                 , GHC.Integer.Logarithms
                 , GHC.Integer.Logarithms.Internals
                 , GHC.Integer.Type
  build-depends: ghc-prim ^>= 0.5.1.0
  extra-libraries: crypto
  includes: openssl/bn.h
  c-sources: wrappers.c
  ghc-options: -this-unit-id integer-wired-in